# GRACE-Orbit-Residuals-db

./: .gitignore  CITATION.cff  LICENSE  README.md  clean-pyenv-from-path.sh  docker-compose.yml  op.sh  posgresql.conf  pyenv-restore-to-path.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2f0ac4b752e5_initial_migration.py  45af718a1568_initial_migration.py  519a7da74bee_initial_migration.py
scripts/: clean_up.sh  config.yaml  df_tail_query.py  first_query.py  init_db.py  populate_db.py  read_data.py  space_time_query.py
src/: machinery.py  models.py  utils.py
src/utils/: label_validation.py  repair_month.py  utils.py
tests/: conftest.py  test_db.py  test_fetch_data.py  test_label_validation.py  test_labeling_system_integration.py  test_populate_db.py  test_postgis_extension.py  test_repair_month.py  test_timescaledb_extension.py
