[tool.poetry]
name = "grace-orbit-residuals-db"
version = "1.0.0"
description = "A scalable pipeline for processing and querying GRACE satellite orbit residuals data using PostgreSQL + PostGIS + TimescaleDB"
authors = [
    "Jose Carlos Urra Llanusa <j.c.urrallanusa@tudelft.nl>",
    "Joao De Teixeira da Encarnacao <j.d.teixeiradaencarnacao@tudelft.nl>",
    "Selin Kubilay <d.s.kubilay@tudelft.nl>",
    "João Guimarães <j.guimaraes@tudelft.nl>",
    "Miguel Cuadrat-Grzybowski <m.cuadrat-grzybowski@tudelft.nl>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SpaceGravimetryTUD"
repository = "https://github.com/SpaceGravimetryTUD/GRACE-Orbit-Residuals-db"
keywords = ["grace", "satellite", "gravity", "geospatial", "timeseries", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.25"
alembic = "^1.12.1"
psycopg2 = "^2.9.10"
geoalchemy2 = "^0.14.1"
geopandas = "^0.14.2"
shapely = "^2.0.2"
uvicorn = "^0.27.0"
python-dotenv = "^1.1.0"
pandas = "^2.2.0"
h11 = "^0.16.0"
xarray = "^2025.4.0"
netcdf4 = "^1.7.2"
PyYAML = "^6.0.2"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^7.4.3"
flake8 = "^7.0.0"
alembic = "^1.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"